holy shit i am stupid.

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ jar {
     }
 }
 
+repositories {
+        mavenCentral()
+}
+
 dependacies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
