--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
         mavenCentral()
 }
 
-dependacies {
+dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 // vim: filetype=groovy 
