added specific server

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: java
 notifications:
      irc:
          channels:
-             -"chat.freenode.net#JourneyThroughAvslor"
+             -"asimov.freenode.net#JourneyThroughAvslor"
