--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.json', name: 'json', version: '20140107'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 // vim: filetype=groovy 
