--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 
 jar {
     manifest {
-        attributes 'Main-Class': 'JourneyThroughAvslor.Main'
+        attributes 'Main-Class': 'org.avslor.JourneyThroughAvslor.Main'
     }
 }
 
